Add swag to /proxy endpoint
